# poetry-versionfile

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-sample.yaml  pyproject.toml
poetry_versionfile/: __main__.py  editable.py  format.py  legacy.py  versionfile.py
