[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-versionfile"
version = "0.0.0"
description = ""
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyinstaller-versionfile = { git = "https://github.com/d-chris/pyinstaller-versionfile.git", rev = "b73ab8c05732606b8582fdd64a8d056c37073ec9" }
click = ">8.0.0"
pre-commit-hooks = ">=5.0.0"
pip = { version = ">=25.1.1", optional = true }
setuptools = { version = ">=80.9.0", optional = true, python = ">=3.12" }
tomli = { version = ">=2.2.1", python = "<3.11" }

[tool.poetry.extras]
pip = [ "pip", "setuptools" ]

[tool.poetry.scripts]
create-version-file = "poetry_versionfile.legacy:create_versionfile"
pyivf-make_version = "poetry_versionfile.legacy:make_version"
versionfile = "poetry_versionfile.__main__:cli"

[tool.versionfile]
company_name = "d-chris"
