[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-versionfile"
version = "0.0.0"
description = ""
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = ">8.0.0"
pre-commit-hooks = ">=5.0.0"
pip = ">=25.1.1"
tomli = { version = ">=2.2.1", python = "<3.11" }
click-tools = { git = "https://github.com/d-chris/click-tools", rev = "1872b11a1957f25d3e09bc9ff68bf795047b5448" }
pyinstaller-versionfile = { git = "https://github.com/d-chris/pyinstaller-versionfile.git", rev = "b73ab8c05732606b8582fdd64a8d056c37073ec9" }

[tool.poetry.scripts]
create-version-file = "poetry_versionfile.legacy:create_versionfile"
pyivf-make_version = "poetry_versionfile.legacy:make_version"
versionfile = "poetry_versionfile.__main__:cli"
