[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-versionfile"
version = "0.0.0"
description = "Generate Windows version files from package metadata"
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/d-chris/poetry-versionfile"

[tool.poetry.dependencies]
python = "^3.9"
click = ">8.0.0"
pre-commit-hooks = ">=5.0.0"
pip = ">=25.1.1"
tomli = { version = ">=2.2.1", python = "<3.11" }
click-tools = { git = "https://github.com/d-chris/click-tools", rev = "1872b11a1957f25d3e09bc9ff68bf795047b5448" }
pyinstaller-versionfile = { git = "https://github.com/d-chris/pyinstaller-versionfile", rev = "3cf68d0d2ca79f3d270bcb934d7b2e936b8c9ae8" }
pyinstaller = { version = "^6.14.2", optional = true, python = "<3.14" }

[tool.poetry.extras]
reader = [ "pyinstaller" ]

[tool.poetry.scripts]
create-version-file = "poetry_versionfile.legacy:create_versionfile"
pyivf-make_version = "poetry_versionfile.legacy:make_version"
versionfile = "poetry_versionfile.__main__:cli"
